@@ -2,6 +2,7 @@ package com.example.puppytalk.Jwt;
 
 import com.example.puppytalk.User.UserRole;
 import io.jsonwebtoken.*;
+import io.jsonwebtoken.io.DecodingException; // 👈 추가됨
 import io.jsonwebtoken.security.Keys;
 import jakarta.annotation.PostConstruct;
 import jakarta.servlet.http.Cookie;
@@ -12,9 +13,9 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.util.Base64;
 import java.util.Date;
@@ -41,6 +42,9 @@ public class JwtUtil {
 
     public String createToken(String username, UserRole role) {
         Date date = new Date();
+        if (role == null) {
+            role = UserRole.USER;
+        }
 
         return BEARER_PREFIX +
                 Jwts.builder()
@@ -54,61 +58,84 @@ public class JwtUtil {
 
     public void addJwtToCookie(String token, HttpServletResponse response) {
         try {
-            token = URLEncoder.encode(token, "utf-8").replaceAll("\\+", "%20");
+            token = URLEncoder.encode(token, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+
             Cookie cookie = new Cookie(AUTHORIZATION_HEADER, token);
             cookie.setPath("/");
+            cookie.setMaxAge(60 * 60);
+            cookie.setHttpOnly(true);
             response.addCookie(cookie);
-        } catch (UnsupportedEncodingException e) {
+        } catch (Exception e) {
             log.error(e.getMessage());
         }
     }
 
-    public String substringToken(String tokenValue) {
-        if (StringUtils.hasText(tokenValue) && tokenValue.startsWith(BEARER_PREFIX)) {
-            return tokenValue.substring(7);
+    private String decodeToken(String tokenValue) {
+        if (tokenValue == null) return null;
+        try {
+            return URLDecoder.decode(tokenValue, StandardCharsets.UTF_8);
+        } catch (Exception e) {
+            return tokenValue;
         }
-        log.error("Not Found Token");
-        throw new NullPointerException("Not Found Token");
+    }
+
+    public String substringToken(String tokenValue) {
+        if (!StringUtils.hasText(tokenValue)) {
+            return null;
+        }
+        tokenValue = decodeToken(tokenValue);
+        tokenValue = tokenValue.trim();
+
+        if (tokenValue.startsWith(BEARER_PREFIX)) {
+            return tokenValue.substring(7).trim();
+        }
+        return tokenValue;
     }
 
     public boolean validateToken(String token) {
         try {
-            if (StringUtils.hasText(token) && token.startsWith(BEARER_PREFIX)) {
-                token = token.substring(7);
+            token = decodeToken(token);
+            if (token != null && token.startsWith(BEARER_PREFIX)) {
+                token = token.substring(7).trim();
             }
+
+            if (!StringUtils.hasText(token)) return false;
 
             Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
             return true;
         } catch (SecurityException | MalformedJwtException | SignatureException e) {
-            log.error("Invalid JWT signature, 유효하지 않는 JWT 서명 입니다.");
+            log.error("Invalid JWT signature");
         } catch (ExpiredJwtException e) {
-            log.error("Expired JWT token, 만료된 JWT 토큰 입니다.");
+            log.error("Expired JWT token");
         } catch (UnsupportedJwtException e) {
-            log.error("Unsupported JWT token, 지원되지 않는 JWT 토큰 입니다.");
+            log.error("Unsupported JWT token");
         } catch (IllegalArgumentException e) {
-            log.error("JWT claims is empty, 잘못된 JWT 토큰 입니다.");
+            log.error("JWT claims is empty");
+        } catch (DecodingException e) {
+            // ⬇️ [핵심] 이 에러가 잡히지 않아서 서버가 멈췄던 것입니다.
+            // % 문자 등이 섞여있어서 디코딩 못할 때 발생하는 에러를 여기서 잡습니다.
+            log.error("JWT decoding failed: {}", e.getMessage());
+        } catch (Exception e) {
+            // 그 외 모든 에러도 안전하게 처리
+            log.error("JWT validation error: {}", e.getMessage());
         }
         return false;
     }
 
     public Claims getUserInfoFromToken(String token) {
-        if (StringUtils.hasText(token) && token.startsWith(BEARER_PREFIX)) {
-            token = token.substring(7);
+        token = decodeToken(token);
+        if (token != null && token.startsWith(BEARER_PREFIX)) {
+            token = token.substring(7).trim();
         }
-
         return Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
     }
 
     public String getTokenFromRequest(HttpServletRequest req) {
         Cookie[] cookies = req.getCookies();
-        if(cookies != null) {
+        if (cookies != null) {
             for (Cookie cookie : cookies) {
                 if (cookie.getName().equals(AUTHORIZATION_HEADER)) {
-                    try {
-                        return URLDecoder.decode(cookie.getValue(), "UTF-8");
-                    } catch (UnsupportedEncodingException e) {
-                        return null;
-                    }
+                    return decodeToken(cookie.getValue());
                 }
             }
         }
